Fix column alignment

--- a/src/minify-tool/scss/style.scss
+++ b/src/minify-tool/scss/style.scss
@@ -38,6 +38,14 @@ $header: #0071fe;
 
   .container {
     width: 100%;
+
+    .columns {
+      .column {
+        &:first-child {
+          margin-top: 5.7rem;
+        }
+      }
+    }
   }
 
   textarea {
